# new-tab

./: .gitignore  Cargo.toml  download_background.sh
src/: common.rs  config.rs  main.rs
src/api/: mod.rs
src/app/: mod.rs
src/calendar/: config.rs  error.rs  facade.rs  memory_calendar.rs  mod.rs
src/calendar/google_calendar/: mod.rs
src/calendar/google_calendar/client/: calendar.rs  mod.rs  token_storage.rs
src/clients/: hackernews.rs  mod.rs
src/clients/google/: calendar.rs  mod.rs  private_model.rs  token_storage.rs
src/feed/: config.rs  facade.rs  hackernews_feed.rs  memory_feed.rs  mod.rs
src/server/: actix_server.rs  config.rs  facade.rs  mod.rs  rocket_server.rs
static/: index.html
