[package]
name = "new-tab-page"
version = "0.1.0"
authors = ["Marcin Radoszewski <moriturius@gmail.com>"]
edition = "2018"

[dependencies]
#rocket = "^0.4"
#rocket_contrib = "^0.4"
#rocket_cors = "0.4"
oauth2_noserver = "0.1.2"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0"
reqwest = "0.9.11"
chrono = "0.4"
time = "0.1"
clokwerk = "0.1"
rayon = "1.0"
actix-web = "1.0.0-alpha.3"
actix-files = "0.1.0-alpha.2"
failure = "0.1.5"
